--- a/Backstage.html
+++ b/Backstage.html
@@ -15,22 +15,22 @@
 
 <header>
 	<div class="logo">
-		<a href="Index.html"> 
+		<a href="index.html"> 
             <img src="images/logo_linea.png" alt = "Logo de The Good Place">
         </a>
 	</div>
 	<nav>
 		<ul class="navigator">
-			<li><a href="Serie.html">Acerca de la serie</a></li>
-			<li><a href="Personajes.html">Personajes</a></li>
-			<li><a href="Media.html">Media</a></li>
+			<li><a href="serie.html">Acerca de la serie</a></li>
+			<li><a href="personajes.html">Personajes</a></li>
+			<li><a href="media.html">Media</a></li>
 			<li class="current">Detrás de escena
 				<ul class="dropdown">
 					<li class="current">Equipo</li>
-					<li><a href="Reviews.html">Recepción</a></li>
+					<li><a href="reviews.html">Recepción</a></li>
 				</ul>
 			</li>
-			<li><a href="About.html">Contacto</a></li>
+			<li><a href="about.html">Contacto</a></li>
 		</ul>
 		<div class="hamburguesa">
 			<span></span>
