--- a/Serie.html
+++ b/Serie.html
@@ -22,7 +22,7 @@
 			<li class="current">Acerca de la serie</li>
 			<li><a href="personajes.html">Personajes</a></li>
 			<li><a href="media.html">Media</a></li>
-			<li><a href="backstage.html">Detrás de escena&#9662</a>
+			<li class="drop"><p>Detrás de escena&#9662</p>
 				<ul  class="dropdown">
 					<li><a href="backstage.html">Equipo</a></li>
 					<li><a href="reviews.html">Recepción</a></li>
