--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
 			<li><a href="serie.html">Acerca de la serie</a></li>
 			<li><a href="personajes.html">Personajes</a></li>
 			<li><a href="media.html">Media</a></li>
-			<li><a href="backstage.html">Detrás de escena&#9662</a>
+			<li class="drop"><p>Detrás de escena&#9662</p>
 				<ul class="dropdown">
 					<li><a href="backstage.html">Equipo</a></li>
 					<li><a href="reviews.html">Recepción</a></li>
