--- a/Media.html
+++ b/Media.html
@@ -25,7 +25,7 @@
 			<li><a href="serie.html">Acerca de la serie</a></li>
 			<li><a href="personajes.html">Personajes</a></li>
 			<li class="current">Media</li>
-			<li><a href="backstage.html">Detrás de escena&#9662</a>
+			<li class="drop"><p>Detrás de escena&#9662</p>
 				<ul class="dropdown">
 					<li><a href="backstage.html">Equipo</a></li>
 					<li><a href="reviews.html">Recepción</a></li>
