--- a/Reviews.html
+++ b/Reviews.html
@@ -23,7 +23,7 @@
 			<li><a href="serie.html">Acerca de la serie</a></li>
 			<li><a href="personajes.html">Personajes</a></li>
 			<li><a href="media.html">Media</a></li>
-			<li class="current">Detrás de escena
+			<li class="current drop"><p class="curp">Detrás de escena</p>
 				<ul class="dropdown">
 					<li><a href="backstage.html">Equipo</a></li>
 					<li class="current">Recepción</li>
@@ -44,11 +44,11 @@
 	<article class="awards">
 		<ul>
 			<li><span>Premios AFI(American Film Institute)</span> :<br> Mejores programas de televisión del año (2017)</li>
-			<li><span>Critics' Choice Television Awards</span> :<br> Serie nueva más emocionante(2016)<br> actor de reparto-Comedia(2018-Ted Danson)</li>
+			<li><span>Critics' Choice Television Awards</span> :<br> Serie nueva más emocionante (2016)<br> actor de reparto-Comedia (2018-Ted Danson)</li>
 			<li><span> Premios Hugo</span> :<br> Mejor representación dramática (años 2018 a 2021)</li>
 			<li><span>Premios Peabody</span> :<br> Homenajeado de entretenimiento(2019)</li>
-			<li><span>People's Choice Awards</span> :<br> Estrella de televisión de comedia del año(2019-Kristen Bell)</li>
-			<li><span>Premios TCA(Television Critics Association)</span> :<br> Logro excepcional en comedia(2018)</li>
+			<li><span>People's Choice Awards</span> :<br> Estrella de televisión de comedia del año (2019-Kristen Bell)</li>
+			<li><span>Premios TCA(Television Critics Association)</span> :<br> Logro excepcional en comedia (2018)</li>
 			<li>Nominada a 14 <span>Premios Primetime Emmy </span> y 2 <span>Globos de oro</span></li>
 		</ul>
 		<img src="images/trophy.jpg" alt="Jason con un trofeo">
